MDEV-15581 Incorrect result (missing row) with UNION DISTINCT in anchor parts

The current code does not support recursive CTEs whose specifications
contain a mix of ALL UNION and DISTINCT UNION operations.
This patch catches such specifications and reports errors for them.